Fixed arrow position for table sorting if text align left

--- a/assets/sass/defra/_tables.scss
+++ b/assets/sass/defra/_tables.scss
@@ -288,7 +288,8 @@ table {
   .sorting-asc,
   .sorting-desc {
     &:after {
-      position: absolute; right: 0;
+      margin-left: 4px;
+      position: absolute;
     }
   }
 
